# box2d-lite-manifest

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
include/box2d-lite/: Arbiter.h  Body.h  Joint.h  MathUtils.h  World.h
samples/: CMakeLists.txt  imgui_impl_glfw.cpp  imgui_impl_opengl2.cpp  main.cpp
src/: Arbiter.cpp  Body.cpp  Collide.cpp  Joint.cpp  World.cpp
